c/examples/writing-a-c-compiler-tests/tests/chapter_8/invalid_semantics/extra_credit/duplicate_case.c
int main(void) {
    switch(4) {
        case 5: return 0;
        case 4: return 1;
        case 5: return 0; // duplicate of previous case 5
        default: return 2;
    }
}